feat: Enhance EditProfile component with form handling and country selection
- Implemented form state management for user profile editing.
- Added file upload functionality for user avatar.
- Integrated country selection dropdown using a JSON file.
- Improved form input handling with reusable FormInput component.
- Added loading state and error handling for API calls.
- Updated translations for new fields in the profile form.

fix: Adjust TableButtons component styling for better layout

- Added padding to the TableButtons container for improved spacing.

chore: Update Arabic and English translations

- Added new translation keys for profile-related fields and error messages.

feat: Create ResetQrModal component for password reset and QR code resend functionality

- Implemented form handling for username, phone number, and email.
- Added loading state and error handling for API requests.

feat: Create CreateOrEditMember component for team member management

- Implemented form handling for creating and editing team members.
- Added support for social media links and file uploads for avatars.

chore: Add countries JSON file for country selection in forms

--- a/frontend/src/i18n/locales/ar/translation.json
+++ b/frontend/src/i18n/locales/ar/translation.json
@@ -647,5 +647,6 @@
   "Admin Login": "تسجيل دخول المسؤول",
   "Logout Account": "تسجيل خروج الحساب",
   "Card saved successfully!": "تم حفظ البطاقة بنجاح!",
-  "Search Historical Events": "البحث في الأحداث التاريخية..."
+  "Search Historical Events": "البحث في الأحداث التاريخية...",
+  "Max size: 5MB. Supported formats: JPG, PNG, GIF, WebP": "الحجم الأقصى: 5 ميجابايت. الصيغ المدعومة: JPG، PNG، GIF، WebP"
 }
