--- a/frontend/src/i18n/locales/en/translation.json
+++ b/frontend/src/i18n/locales/en/translation.json
@@ -15,9 +15,11 @@
   "At least one number, symbol, or whitespace": "At least one number, symbol, or whitespace",
   "Current password is required": "Current password is required",
   "New password is required": "New password is required",
+  "Confirm password is required": "Confirm password is required",
   "Re-type password is required": "Re-type password is required",
   "Passwords do not match": "Passwords do not match",
   "Password changed successfully!": "Password changed successfully!",
+  "Profile updated successfully": "Profile updated successfully",
   "Change Password": "Change Password",
   "Current password": "Current password",
   "New password": "New password",
@@ -83,10 +85,15 @@
   "Cancel": "Cancel",
   "Save Changes": "Save Changes",
   "Add Event": "Add Event",
+  "Name": "Name",
   "User Name": "User Name",
   "Position": "Position",
   "Job": "Job",
+  "Job Title": "Job Title",
+  "Avatar": "Avatar",
   "Avatar URL": "Avatar URL",
+  "Optional - Alternative to file upload": "Optional - Alternative to file upload",
+  "Enter image URL as alternative to file upload": "Enter image URL as alternative to file upload",
   "Social Media": "Social Media",
   "Social Network Name (e.g., Facebook)": "Social Network Name (e.g., Facebook)",
   "Social Network URL": "Social Network URL",
@@ -192,6 +199,18 @@
   "Active Status": "Active Status",
   "Minutes": "Minutes",
   "Metadata": "Metadata",
+  "Kind": "Kind",
+  "Card": "Card",
+  "Card Type": "Card Type",
+  "Main Image URL": "Main Image URL",
+  "Cover Image URL": "Cover Image URL",
+  "Alternative to file upload": "Alternative to file upload",
+  "Enter cover image URL as alternative to file upload": "Enter cover image URL as alternative to file upload",
+  "Enter card type (e.g., featured, regular, special)": "Enter card type (e.g., featured, regular, special)",
+  "Additional metadata in JSON format (optional)": "Additional metadata in JSON format (optional)",
+  "Example: {\"tags\": [\"featured\", \"popular\"], \"priority\": 1}": "Example: {\"tags\": [\"featured\", \"popular\"], \"priority\": 1}",
+  "Card created successfully": "Card created successfully",
+  "Card updated successfully": "Card updated successfully",
   "Post ID": "Post ID",
   "Created Date": "Created Date",
   "Last Updated": "Last Updated",
@@ -464,6 +483,13 @@
   "Reports Only": "Reports Only",
   "Search by author...": "Search by author...",
   "Country": "Country",
+  "First Name": "First Name",
+  "Last Name": "Last Name",
+  "Display Name": "Display Name",
+  "Address Details": "Address Details",
+  "Mobile Number": "Mobile Number",
+  "Profession": "Profession",
+  "Select Country": "Select Country",
   "All Countries": "All Countries",
   "USA": "USA",
   "Canada": "Canada",
