feat: Enhance Video Details and List Components
- Updated ShowVideoDetails component to improve layout and add new features:
  - Added reference code display and improved thumbnail handling.
  - Enhanced video statistics with formatted views and duration.
  - Introduced status badges for featured and new videos.
  - Improved styling for better user experience.

- Refactored VideosList component:
  - Integrated API calls for fetching and deleting videos.
  - Added search functionality to filter videos.
  - Updated table to display additional video information including reference code and published date.
  - Improved pagination and loading states.

- Updated Sidebar component to reflect changes in navigation titles.

- Enhanced localization files with new translations for video-related terms.

- Implemented authentication utility functions for user session management.

- Created API service for video operations including fetching, creating, editing, and deleting videos.

--- a/frontend/src/i18n/locales/ar/translation.json
+++ b/frontend/src/i18n/locales/ar/translation.json
@@ -154,6 +154,19 @@
   "Post deleted successfully": "تم حذف المقال بنجاح",
   "An error occurred while deleting the post": "حدث خطأ أثناء حذف المقال",
   "Posts List": "قائمة المقالات",
+  "Search posts...": "البحث في المقالات...",
+  "No posts found matching your search": "لم يتم العثور على مقالات مطابقة لبحثك",
+  "No posts available": "لا توجد مقالات متاحة",
+  "Found": "تم العثور على",
+  "results for": "نتائج لـ",
+  "Reference Code": "رمز المرجع",
+  "Enter reference code (optional)": "أدخل رمز المرجع (اختياري)",
+  "Published Date": "تاريخ النشر",
+  "Leave empty to set automatically when publishing": "اتركه فارغاً للتعيين التلقائي عند النشر",
+  "Thumbnail URL": "رابط الصورة المصغرة",
+  "Enter thumbnail URL as alternative to file upload": "أدخل رابط الصورة المصغرة كبديل لرفع الملف",
+  "You can either upload a file above or provide a URL here": "يمكنك إما رفع ملف أعلاه أو توفير رابط هنا",
+  "Back to Videos List": "العودة إلى قائمة الفيديوهات",
   "Loading": "جارٍ التحميل",
   "Total": "الإجمالي",
   "Add New Post": "إضافة مقال جديد",
