--- a/frontend/src/i18n/locales/en/translation.json
+++ b/frontend/src/i18n/locales/en/translation.json
@@ -184,6 +184,19 @@
   "An error occurred while deleting the post": "An error occurred while deleting the post",
   "Post saved successfully": "Post saved successfully",
   "Posts List": "Posts List",
+  "Search posts...": "Search posts...",
+  "No posts found matching your search": "No posts found matching your search",
+  "No posts available": "No posts available",
+  "Found": "Found",
+  "results for": "results for",
+  "Reference Code": "Reference Code",
+  "Enter reference code (optional)": "Enter reference code (optional)",
+  "Published Date": "Published Date",
+  "Leave empty to set automatically when publishing": "Leave empty to set automatically when publishing",
+  "Thumbnail URL": "Thumbnail URL",
+  "Enter thumbnail URL as alternative to file upload": "Enter thumbnail URL as alternative to file upload",
+  "You can either upload a file above or provide a URL here": "You can either upload a file above or provide a URL here",
+  "Back to Videos List": "Back to Videos List",
   "Add New Post": "Add New Post",
   "Views": "Views",
   "Active": "Active",
