Refactor dashboard components and implement news categories management
- Removed Videos component exports from the dashboard.
- Updated EventsFilter to hide default options for country and language selection.
- Enhanced Profile component to support internationalization for various labels and placeholders.
- Modified EditProfile to hide default country selection option.
- Adjusted LearnFilter to hide default options for category, type, language, and source.
- Improved LogoutConfirmation to clear additional localStorage items on logout.
- Fixed Modal component styling by removing unnecessary space in zIndex.
- Updated Sidebar to reflect new navigation structure for news management.
- Added constants for languages and post status options.
- Translated various strings in Arabic localization file for better user experience.
- Enhanced Dashboard content management to support saving and retrieving state from localStorage.
- Introduced NewsCategoriesContent component for managing news categories with CRUD operations.

--- a/frontend/src/i18n/locales/ar/translation.json
+++ b/frontend/src/i18n/locales/ar/translation.json
@@ -234,7 +234,7 @@
   "Warning": "تحذير",
   "This action is permanent and cannot be reversed.": "هذا الإجراء دائم ولا يمكن التراجع عنه.",
   "Additional Information": "معلومات إضافية",
-  "Published": "منشور",
+  "Published": "تم النشر",
   "Video URL": "رابط الفيديو",
   "New Video": "فيديو جديد",
   "Video deleted successfully": "تم حذف الفيديو بنجاح",
@@ -661,5 +661,105 @@
   "Logout Account": "تسجيل خروج الحساب",
   "Card saved successfully!": "تم حفظ البطاقة بنجاح!",
   "Search Historical Events": "البحث في الأحداث التاريخية...",
-  "Max size: 5MB. Supported formats: JPG, PNG, GIF, WebP": "الحجم الأقصى: 5 ميجابايت. الصيغ المدعومة: JPG، PNG، GIF، WebP"
+  "Max size: 5MB. Supported formats: JPG, PNG, GIF, WebP": "الحجم الأقصى: 5 ميجابايت. الصيغ المدعومة: JPG، PNG، GIF، WebP",
+  "Add/Edit Post": " إضافة/تعديل مقال",
+  "Posts Categories": "فئات المقالات",
+  "Videos Categories": "فئات الفيديوهات",
+  "Positions": "المناصب",
+  "Enter metadata (JSON format)": "أدخل البيانات الوصفية (تنسيق JSON)",
+  "Or enter image URL": "أو أدخل رابط الصورة",
+  "Select Status": "اختر الحالة",
+  "Image": "صورة",
+  "Select Country": "اختر الدولة",
+  "Body Content": "محتوى الجسم",
+  "Enter the full content of the post": "أدخل المحتوى الكامل للمقال",
+  "This is the main content that will be displayed to readers": "هذا هو المحتوى الرئيسي الذي سيظهر للقراء",
+  "Optional metadata in JSON format": "بيانات وصفية اختيارية بتنسيق JSON",
+  "Back to Posts List": " العودة إلى قائمة المقالات",
+  "published": "تم النشر",
+  "archived": "تم الأرشفة",
+  "Enter Read Time in minutes": "أدخل وقت القراءة بالدقائق",
+  "Create / Edit Video": "إنشاء / تعديل فيديو",
+  "Create / Edit Post": "إنشاء / تعديل مقال",
+  "Enter video description": "أدخل وصف الفيديو",
+  "Season": "الموسم",
+  "Episode": "الحلقة",
+  "Casts": "طاقم التمثيل",
+  "Type a cast member name and press Enter": "اكتب اسم عضو الطاقم واضغط على  ",
+  "Enter season number or name": "أدخل رقم أو اسم الموسم",
+  "Alternative to file upload": "بديل لرفع الملفات",
+  "Go to Videos List": "الذهاب إلى قائمة الفيديوهات",
+  "Go to Posts List": "الذهاب إلى قائمة المقالات",
+  "Add Category": "إضافة فئة",
+  "Name": "الاسم",
+  "Story Date": "تاريخ القصة",
+  "Last Name": "اسم العائلة",
+  "First Name": "الاسم الأول",
+  "Display Name": "اسم العرض",
+  "Profession": "المهنة",
+  "Mobile Number": "رقم الهاتف",
+  "Address Details": "تفاصيل العنوان",
+  "About me": "نبذة عني",
+  "Tell us about yourself...": "أخبرنا عن نفسك...",
+  "Full Name": "الاسم الكامل",
+  "Website": "الموقع الإلكتروني",
+  "You have unsaved changes. Click 'Update Profile' to save them.": "لديك تغييرات غير محفوظة. انقر على 'تحديث الملف الشخصي' لحفظها.",
+  "example: https://yourwebsite.com": "مثال: https://yourwebsite.com",
+  "Address": "العنوان",
+  "Publications": "المنشورات",
+  "Following": "التالي",
+  "Season is required": "الموسم مطلوب",
+  "Tags are required": "العلامات مطلوبة",
+  "Cast is required": "الطاقم مطلوب",
+  "Description is required": "الوصف مطلوب",
+  "Unit Clips": "مقاطع  ",
+  "Work Team": "فريق العمل",
+  "Manage team members and their data": "إدارة أعضاء الفريق وبياناتهم",
+  "Search members?...": "البحث عن الأعضاء...",
+  "Pick Story date": "اختر تاريخ القصة",
+  "Event Image": "صورة الحدث",
+  "Back to Dashboard": "العودة إلى لوحة التحكم",
+  "Select Position": "اختر المنصب",
+  "Avatar": "الصورة الرمزية",
+  "Job Title": "المسمى الوظيفي",
+  "platform": "المنصة",
+  "Enter image URL as alternative to file upload": "أدخل رابط الصورة كبديل لرفع الملفات",
+  "Developer, Manager, etc": "مطور، مدير، إلخ",
+  "Enter full name": "أدخل الاسم الكامل",
+  "Enter a brief description or bio": "أدخل وصفًا موجزًا أو سيرة ذاتية",
+  "Name is required": "الاسم مطلوب",
+  "Position is required": "المنصب مطلوب",
+  "Job title is required": "المسمى الوظيفي مطلوب",
+  "Avatar is required": "الصورة الرمزية مطلوبة",
+  "Add Position": "إضافة منصب",
+  "No positions found": "لا توجد مناصب",
+  "Member created successfully": "تم إنشاء العضو بنجاح",
+  "Story date is required": "تاريخ القصة مطلوب",
+  "Image is required": "الصورة مطلوبة",
+  "Positions Management": "إدارة المناصب",
+  "Manage team positions and roles": "إدارة مناصب الفريق والأدوار",
+  "positions": "المناصب",
+  "Manage posts categories and classifications": "إدارة فئات وتصنيفات المقالات",
+  "Add/Edit News": "إضافة/تعديل الأخبار",
+  "News List": "قائمة الأخبار",
+  "News Categories": "فئات الأخبار",
+  "Air Date": "تاريخ العرض",
+  "Max size: 5MB. Supported formats: JPG, PNG, WebP": " الحجم الأقصى: 5 ميجابايت. الصيغ المدعومة: JPG، PNG، WebP",
+  "Live Program": "برنامج مباشر",
+  "Enter image URL as alternative": "أدخل رابط الصورة كبديل",
+  "Back to Video List": "العودة إلى قائمة الفيديوهات",
+  "Create New News": "إنشاء أخبار جديدة",
+  "Edit New News": "تعديل الأخبار الجديدة",
+  "Air date is required": "تاريخ العرض مطلوب",
+  "Manage news categories and classifications": " إدارة فئات وتصنيفات الأخبار",
+  "categories": "الفئات",
+  "Search Categories": "البحث عن الفئات",
+  "Manage videos categories and classifications": "إدارة فئات وتصنيفات الفيديوهات",
+  "Draft": "مسودة",
+  "Archived": "مؤرشفة",
+  "": "",
+  "": "",
+  "": "",
+  "": "",
+  "": ""
 }
