Refactor PostsList component to improve pagination handling and reset logic
Enhance FilteredResults component with pagination controls and improved data handling

Update GuindReadingFilterSction to support custom filters and pagination

Modify FilterDatePickerModal to reflect changes from 'Published Date' to 'Created Date'

Fix AutoComplete component by removing unnecessary text

Revise ContentInfoCard to include body content and improve layout

Adjust GuidingReadingcard image styling for better presentation

Update LearnFilter component to manage filters more effectively and support pagination

Refactor PostsFilterSction to integrate pagination and clear filter results

Add Arabic translations for new terms and phrases

Refactor CardsAndPhotosContent to utilize PostsFilterSction instead of LearnFilter

Update CardDetailsContent to fetch and display card data correctly

Revise GuidedReadingContent to use PostsFilterSction for filtering

--- a/frontend/src/i18n/locales/ar/translation.json
+++ b/frontend/src/i18n/locales/ar/translation.json
@@ -761,5 +761,15 @@
   "Search writers...": "البحث عن الكتاب...",
   "Event updated successfully": "تم تحديث الحدث بنجاح",
   "Happened At": "حدث في",
+  "Please fix the errors in the form": "  يرجى تصحيح الأخطاء في النموذج",
+  "Status is required": "الحالة مطلوبة",
+  "Read time is required": "وقت القراءة مطلوب",
+  "Card": "كرت",
+  "Reading": "قراءة",
+  "Camera Model": "طراز الكاميرا",
+  "Camera Man": "المصور",
+  "Enter camera model": "أدخل طراز الكاميرا",
+  "": "",
+  "": "",
   "": ""
 }
